Replaced use of 'Collectors#toList()' with 'Stream#toList()'